# data_proc_benchmark

./: .gitignore  CHANGELOG.md  README.md  TECHNICAL.md  benchmark_all_sh.sh  benchmark_all_win.bat  benchmark_results.csv  check_dataset_size.py  main.py  pyproject.toml  test_packages.py
analysis/: 01_analysis.ipynb
data/: benchmark_results.csv
scripts/benchmark/: benchmark.py  benchmark_01.py  benchmark_02.py  benchmark_modular.py
scripts/log-gen/: test_generator_01.py
scripts/tools/: csv_to_parquet.py
utils/: __init__.py  config.py  data_io.py  host_info.py  memory_utils.py  platform_utils.py
