[project]
name = "data-proc-benchmark"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "gputil>=1.4.0",
    "modin[dask]>=0.35.0",
    "pandas>=2.3.2",
    "parquet>=1.3.1",
    "polars>=1.32.3",
    "py-cpuinfo>=9.0.0",
    "pyarrow>=21.0.0",
    "typing-extensions>=4.14.1",
    "wmi>=1.5.1",
]
